5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1578_1326.log
== TEST (2019-03-14 18:49:40) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:49:50) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:49:51) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:50:21) 
-- CODE:
print($40 + $35)
-- ERROR:
File "XXXX", line 1
    print($40 + $35)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:51:05) 
-- CODE:
print("$ 40 + 35")
-- OUTPUT:
$ 40 + 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:51:20) 
-- CODE:
print("$ 40 + 35 = 75")
-- OUTPUT:
$ 40 + 35 = 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:52:07) 
-- CODE:
print("$ 40 + 35 = 75")
-- EXECUTION TIME:
0.174032
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
$ 40 + 35 = 75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:52:26) 
-- CODE:
print("$75")
-- OUTPUT:
$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:52:29) 
-- CODE:
print("$75")
-- EXECUTION TIME:
0.236663
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:53:05) 
-- CODE:
print($40"+"$35)
-- ERROR:
File "XXXX", line 1
    print($40"+"$35)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:53:22) 
-- CODE:
print($40+$35)
-- ERROR:
File "XXXX", line 1
    print($40+$35)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:56:11) 
-- CODE:
print("Adição: ", 40+35)
-- OUTPUT:
Adição:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:56:22) 
-- CODE:
print("Adição:", 40+35)
-- OUTPUT:
Adição: 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:56:37) 
-- CODE:
print("Adição: ", 40 + 35)
-- OUTPUT:
Adição:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:56:52) 
-- CODE:
print("Adiçao: ", 40 + 35)
-- OUTPUT:
Adiçao:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:21:57) 
-- CODE:
print($ 75)
-- ERROR:
File "XXXX", line 1
    print($ 75)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:22:01) 
-- CODE:
print($75)
-- ERROR:
File "XXXX", line 1
    print($75)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:22:17) 
-- CODE:
print("$"75)
-- ERROR:
File "XXXX", line 1
    print("$"75)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:22:21) 
-- CODE:
print("$" 75)
-- ERROR:
File "XXXX", line 1
    print("$" 75)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:22:30) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:22:32) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.186626
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 16:51:56) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.210251
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 17:07:14) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.211716
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 17:15:52) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.148153
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:38) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.163678
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:03:28) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.177704
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:34:29) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.221823
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:33:19) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.186055
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:47:21) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.11327
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:36:35) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.176112
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
